--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,3 +20,19 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+
+  development: &development
+  calendarId: 'primary'
+  service_account_email: 'beerapp@fresh-weft-130915.iam.gserviceaccount.com'
+  impersonate_user_email: 'beerapp@gmail.com'
+  key_file: <%= "#{ENV['HOME']}/.eventr/<[MAP_API_KEY]>" %>
+  key_secret: 'private-key-secret'
+
+test:
+  <<: *development
+
+integration:
+  <<: *development
+
+production:
+  <<: *development
