updated business profile

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -25,7 +25,7 @@ production:
   calendarId: 'primary'
   service_account_email: 'beerapp@fresh-weft-130915.iam.gserviceaccount.com'
   impersonate_user_email: 'beerapp@gmail.com'
-  key_file: <%= "#{ENV['HOME']}/.eventr/<[MAP_API_KEY]>" %>
+  key_file: <%= "#{ENV['HOME']}/.eventr/<[CALENDAR_API_KEY]>" %>
   key_secret: 'private-key-secret'
 
 test:
